# Thesis

./: CMakeLists.txt  LUTstack.cpp  LUTstack.h  angular_spectrum_kernel.cpp  angular_spectrum_kernel.h  hologram.cpp  hologram.h  main.cpp  plane.txt  pointcloud.cpp  pointcloud.h
